--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -282,8 +282,8 @@
 
 @media only screen and (max-width: 1025px) {
   .career-section {
-    padding: 70px 0px;
-    padding-top: 100px;
+    padding: 40px 0px;
+    padding-top: 50px;
     margin-top: 0px;
     margin-bottom: 0;
   }
@@ -366,7 +366,7 @@
   }
 
   .career-section {
-    padding-top: 90px;
+    padding-top: 40px;
     margin-top: 0px;
 
     align-items: start;
